@@ -1,3 +1,10 @@
+Tue Jul  7 21:38:11 UTC 2009  Jeff Parsons  <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/fe/idl.yy:
+        * TAO_IDL/fe/y.tab.cpp:
+
+          Added semantic action that creates a template interface in the AST.
+
 Tue Jul  7 21:12:52 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/include/ast_generator.h:
@@ -14,10 +21,10 @@ Tue Jul  7 21:12:52 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>
         * TAO_IDL/fe/fe_template_interface_header.cpp:
         * TAO_IDL/fe/y.tab.cpp:
         * TAO_IDL/fe/fe_interface_header.cpp:
-        
+
           - Changed FE_Template_InterfaceHeader to inherit from
             FE_InterfaceHeader and reuse much of its code.
-            
+
           - Added factory methods for creating template interfaces
             in the AST.
 
@@ -28,7 +35,7 @@ Tue Jul  7 18:56:01 UTC 2009  Jeff Parsons  <j.parsons@vanderbilt.edu>
 
           New files, defining datatypes used to hold information about a
           template interface's template parameters and inheritance.
- 
+
         * TAO_IDL/ast/ast_template_interface.cpp:
         * TAO_IDL/be/be_template_interface.cpp:
         * TAO_IDL/be_include/be_template_interface.h:
